著作権表示の更新

--- a/materiacalcja.html
+++ b/materiacalcja.html
@@ -311,10 +311,10 @@
                 記載されている会社名・製品名・システム名などは、各社の商標、または登録商標です。<br />
                 Copyright (C) 2010 - 2017 SQUARE ENIX CO., LTD. All Rights Reserved.
                 /
-                Copyright (C) 2017 <a href="http://coconuts-palm.cocolog-nifty.com/">Lunor</a> All Rights Reserved.
+                Copyright (C) 2017-2019 <a href="https://github.com/rougemeilland">Palmtree Software</a> All Rights Reserved.
             </p>
             <p class="versioninfoblockstyle">
-                最終更新日: 2018年9月15日
+                最終更新日: 2019年4月27日
             </p>
         </div>
     </footer>
